Update Portfolio Optimization Practices and Theory (GMV Portfolio w. Convex Optimization).ipynb

--- a/Portfolio Theory/Portfolio Optimization Practices and Theory (GMV Portfolio w. Convex Optimization).ipynb
+++ b/Portfolio Theory/Portfolio Optimization Practices and Theory (GMV Portfolio w. Convex Optimization).ipynb
@@ -16,9 +16,9 @@
    "outputs": [],
    "source": [
     "# In theory, the Maximum Sharpe Ratio portfolio would be optimal. However, because estimating this is often\n",
-    "# a game of...estimates, an alterenative is the Global Minimum Variance portfolio.\n",
+    "# a game of...estimates, an alternative is the Global Minimum Variance portfolio.\n",
     " \n",
-    "# This is another 'remarkable' portfolio on the efficient fromtier, other than the MSR. This portfolio analysis \n",
+    "# This is another 'remarkable' portfolio on the efficient frontier, other than the MSR. This portfolio analysis \n",
     "# does not require any future return estimates."
    ]
   },
